--- a/www/templates/UploadImages.html
+++ b/www/templates/UploadImages.html
@@ -12,7 +12,7 @@
             </div>
              <div class="row row-center">
                 <div class="col">
-                    <img ng-click="takePic()" src="/img/button/choose-album.png" class="button-small"/>
+                    <img ng-click="getPhoto(navigator.camera.PictureSourceType.PHOTOLIBRARY)" src="/img/button/choose-album.png" class="button-small"/>
                 </div>
             </div>
             <div class="row row-center">
