--- a/www/templates/InviteFrom.html
+++ b/www/templates/InviteFrom.html
@@ -14,7 +14,7 @@
             <div class="row row-center">
                 <div class="col">
                     <label class="item item-input">
-                        <textarea></textarea>
+                        <textarea maxlength="30" data-ng-minLength="1"></textarea>
                     </label>
                 </div>
             </div>
@@ -32,14 +32,14 @@
             <div class="row row-center">
                 <div class="col">
                     <label class="item item-input">
-                        <textarea></textarea>
+                        <textarea maxlength="150" rows="4" data-ng-minLength="1"></textarea>
                     </label>
                 </div>
             </div>
             <hr>
             <div class="row row-center">
                 <div class="col">
-                    <h3>Categories:</h3>
+                    <h2>Categories:</h2>
                 </div>
             </div>
             <div class="row row-center">
@@ -53,7 +53,7 @@
              <hr>
             <div class="row row-center">
                 <div class="col">
-                    <h3>Set time limit:</h3>
+                    <h2>Set time limit:</h2>
                 </div>
             </div>
             <div class="row row-center">
