--- a/www/templates/EditPreferences.html
+++ b/www/templates/EditPreferences.html
@@ -86,6 +86,6 @@
 </ion-view>
 <div class="edit-preferences-foot bar bar-footer bar-balanced ">
     <div class="foot-nav center">
-        <img ng-click="Submit()" src="/img/button/submit.png" class="submit-small"/>
+        <img ng-click="Submit()" src="img/button/submit.png" class="submit-small"/>
     </div>
 </div>
