--- a/www/templates/EditProfile.html
+++ b/www/templates/EditProfile.html
@@ -6,21 +6,21 @@
         <div class="content has-header padding-vertical padding-horizontal">
             <div class="row row-center">
                 <div class="col item item-image thumbnail-big">
-                    <img src="/ref/-Chris-Hemsworth-chris-hemsworth-32422378-400-600.png" class="thumbnail"/>
+                    <img src="ref/-Chris-Hemsworth-chris-hemsworth-32422378-400-600.png" class="thumbnail"/>
                 </div>
             </div>
             <div class="row row-center">
                 <div class="col item item-image thumbnail-small">
-                    <img src="/ref/17d59f1e-bbf4-424a-92c2-bc602873b369.jpg" class="thumbnail middle"/>
+                    <img src="ref/17d59f1e-bbf4-424a-92c2-bc602873b369.jpg" class="thumbnail middle"/>
                 </div>
                 <div class="col item item-image thumbnail-small">
-                    <img src="/ref/chris-hemsworth-8-768.jpg" class="thumbnail middle"/>
+                    <img src="ref/chris-hemsworth-8-768.jpg" class="thumbnail middle"/>
                 </div>
                 <div class="col item item-image thumbnail-small">
-                    <img src="/ref/chris-hemsworth-short-hair-01132015-06-675x900.jpg" class="thumbnail middle"/>
+                    <img src="ref/chris-hemsworth-short-hair-01132015-06-675x900.jpg" class="thumbnail middle"/>
                 </div>
                 <div class="col item item-image thumbnail-small">
-                    <img ng-click="nextUploadImages()" src="/img/plus.png" class="plus middle"/>
+                    <img ng-click="nextUploadImages()" src="img/plus.png" class="plus middle"/>
                 </div>
 
             </div>
@@ -41,6 +41,6 @@
 </ion-view>
 <div class="edit-profile-foot bar bar-footer bar-balanced ">
     <div class="foot-nav">
-        <img ng-click="nextEditPreferences()" src="/img/button/next.png" class="next-small"/>
+        <img ng-click="nextEditPreferences()" src="img/button/next.png" class="next-small"/>
     </div>
 </div>
