--- a/www/templates/LookForInvites.html
+++ b/www/templates/LookForInvites.html
@@ -25,13 +25,13 @@
                         <div class="foot-nav center">
                             <div class="row row-center">
                                 <div class="col">
-                                    <img ng-click="CreateInvite()" src="/img/yes.png" class="look-icon-small"/>
+                                    <img ng-click="CreateInvite()" src="img/yes.png" class="look-icon-small"/>
                                 </div>
                                 <div class="col">
-                                    <img ng-click="CreateInvite()" src="/img/info.png" class="look-icon-small"/>
+                                    <img ng-click="CreateInvite()" src="img/info.png" class="look-icon-small"/>
                                 </div>
                                 <div class="col">
-                                    <img ng-click="CreateInvite()" src="/img/no.png" class="look-icon-small"/>
+                                    <img ng-click="CreateInvite()" src="img/no.png" class="look-icon-small"/>
                                 </div>
                             </div>
                         </div>
@@ -62,13 +62,13 @@
                         <div class="foot-nav center">
                             <div class="row row-center">
                                 <div class="col">
-                                    <img ng-click="CreateInvite()" src="/img/yes.png" class="look-icon-small"/>
+                                    <img ng-click="CreateInvite()" src="img/yes.png" class="look-icon-small"/>
                                 </div>
                                 <div class="col">
-                                    <img ng-click="CreateInvite()" src="/img/info.png" class="look-icon-small"/>
+                                    <img ng-click="CreateInvite()" src="img/info.png" class="look-icon-small"/>
                                 </div>
                                 <div class="col">
-                                    <img ng-click="CreateInvite()" src="/img/no.png" class="look-icon-small"/>
+                                    <img ng-click="CreateInvite()" src="img/no.png" class="look-icon-small"/>
                                 </div>
                             </div>
                         </div>
@@ -99,13 +99,13 @@
                         <div class="foot-nav center">
                             <div class="row row-center">
                                 <div class="col">
-                                    <img ng-click="InviteYes()" src="/img/yes.png" class="look-icon-small"/>
+                                    <img ng-click="InviteYes()" src="img/yes.png" class="look-icon-small"/>
                                 </div>
                                 <div class="col">
-                                    <img ng-click="InviteInfo()" src="/img/info.png" class="look-icon-small"/>
+                                    <img ng-click="InviteInfo()" src="img/info.png" class="look-icon-small"/>
                                 </div>
                                 <div class="col">
-                                    <img ng-click="InviteNo()" src="/img/no.png" class="look-icon-small"/>
+                                    <img ng-click="InviteNo()" src="img/no.png" class="look-icon-small"/>
                                 </div>
                             </div>
                         </div>
