--- a/www/templates/UploadImages.html
+++ b/www/templates/UploadImages.html
@@ -7,12 +7,12 @@
            
             <div class="row row-center">
                 <div class="col">
-                    <img src="/img/album.png" class="icon-small"/>
+                    <img src="img/album.png" class="icon-small"/>
                 </div>
             </div>
              <div class="row row-center">
                 <div class="col">
-                    <img ng-click="getPhoto()" src="/img/button/choose-album.png" class="button-small"/>
+                    <img ng-click="getPhoto()" src="img/button/choose-album.png" class="button-small"/>
                 </div>
             </div>
             <div class="row row-center">
@@ -22,12 +22,12 @@
             </div>
             <div class="row row-center">
                 <div class="col">
-                    <img src="/img/camera.png" class="icon-small"/>
+                    <img src="img/camera.png" class="icon-small"/>
                 </div>
             </div>
              <div class="row row-center">
                 <div class="col">
-                    <img ng-click="takePic()" src="/img/button/take-photo.png" class="button-small"/>
+                    <img ng-click="takePic()" src="img/button/take-photo.png" class="button-small"/>
                 </div>
             </div>
         </div>
@@ -35,6 +35,6 @@
 </ion-view>
 <div class="upload-images-foot bar bar-footer bar-balanced ">
     <div class="foot-nav">
-        <img ng-click="nextEditPreferences()" src="/img/button/next.png" class="next-small"/>
+        <img ng-click="nextEditPreferences()" src="img/button/next.png" class="next-small"/>
     </div>
 </div>
