--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -3,7 +3,7 @@
         <div class="content has-header padding-vertical padding-horizontal">
             <div class="row row-center box-logo">
                 <div class="col">
-                    <img src="/img/logo.png" class="logo"/>
+                    <img src="img/logo.png" class="logo"/>
                 </div>
             </div>
             <div class="row row-center">
