--- a/www/templates/InviteFrom.html
+++ b/www/templates/InviteFrom.html
@@ -58,20 +58,18 @@
             </div>
             <div class="row row-center">
                 <div class="col input-km">
-                    <div class="list list-inset">
                         <label class="item item-input">
                             <input type="text" placeholder="HH:MM">
                         </label>
-                    </div>
                 </div>
             </div>
              <hr>
             <div class="row row-center">
                 <div class="col left">
-                    <ion-checkbox ng-model="isCheckedAll.value">All</ion-checkbox>
+                    <ion-checkbox ng-model="isCheckedShare.value">All</ion-checkbox>
                 </div>
                 <div class="col right">
-                    <img src="img/facebook.png" />
+                    <img class="fb-small" src="img/facebook.png" />
                 </div>
             </div>
              <hr>
@@ -80,6 +78,6 @@
 </ion-view>
 <div class="edit-preferences-foot bar bar-footer bar-balanced ">
     <div class="foot-nav center">
-        <img ng-click="Submit()" src="/img/button/submit.png" class="submit-small"/>
+        <img ng-click="Submit()" src="img/button/submit.png" class="submit-small"/>
     </div>
 </div>
