--- a/www/templates/TakeAPicture.html
+++ b/www/templates/TakeAPicture.html
@@ -11,6 +11,6 @@
 </ion-view>
 <div ng-controller="TakeAPictureController" class="LookForInvites-foot bar bar-footer bar-balanced ">
     <div class="foot-nav center">
-        <img ng-click="Next()" src="/img/button/next2.png" class="submit-small"/>
+        <img ng-click="Next()" src="img/button/next2.png" class="submit-small"/>
     </div>
 </div>
