--- a/www/templates/TakeAPicture.html
+++ b/www/templates/TakeAPicture.html
@@ -10,7 +10,10 @@
     </ion-content>
 </ion-view>
 <div ng-controller="TakeAPictureController" class="LookForInvites-foot bar bar-footer bar-balanced ">
-    <div class="foot-nav center">
+    <div class="foot-nav left">
+        <img ng-click="RetakePhoto()" src="img/button/retake-photo.png" class="submit-small"/>
+    </div>
+    <div class="foot-nav right">
         <img ng-click="Next()" src="img/button/next2.png" class="submit-small"/>
     </div>
 </div>
