add Take a picture enroll page add Write Proposal page

--- a/www/templates/TakeAPictureEnroll.html
+++ b/www/templates/TakeAPictureEnroll.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Take a picture"  class="TakeAPicture-page">
-    <ion-content ng-controller="TakeAPictureController">
+<ion-view view-title="Take a picture"  class="TakeAPictureEnroll-page">
+    <ion-content ng-controller="TakeAPictureEnrollController">
         <div class="content has-header padding-vertical padding-horizontal">
             <div class="row row-center">
                 <div class="col">
@@ -9,11 +9,11 @@
         </div>
     </ion-content>
 </ion-view>
-<div ng-controller="TakeAPictureController" class="LookForInvites-foot bar bar-footer bar-balanced ">
+<div ng-controller="TakeAPictureEnrollController" class="TakeAPictureEnroll-foot bar bar-footer bar-balanced ">
     <div class="foot-nav left">
-        <img ng-click="RetakePhoto()" src="img/button/retake-photo.png" class="submit-small"/>
+        <img ng-click="RetakePhoto()" src="img/button/retake-photo2.png" class="submit-small"/>
     </div>
     <div class="foot-nav right">
-        <img ng-click="Next()" src="img/button/next2.png" class="submit-small"/>
+        <img ng-click="Next()" src="img/button/next3.png" class="submit-small"/>
     </div>
 </div>
