--- a/www/templates/WriteProposal.html
+++ b/www/templates/WriteProposal.html
@@ -1,19 +1,26 @@
-<ion-view view-title="Take a picture"  class="TakeAPicture-page">
-    <ion-content ng-controller="TakeAPictureController">
+<ion-view view-title="Write Proposal"  class="WriteProposal-page">
+    <ion-content ng-controller="WriteProposalController">
         <div class="content has-header padding-vertical padding-horizontal">
             <div class="row row-center">
                 <div class="col">
-                    
+                    <h2>Message :</h2>
+                </div>
+            </div>
+            <div class="row row-center">
+                <div class="col">
+                    <label class="item item-input">
+                        <textarea maxlength="150" rows="5" data-ng-minLength="1"></textarea>
+                    </label>
                 </div>
             </div>
         </div>
     </ion-content>
 </ion-view>
-<div ng-controller="TakeAPictureController" class="LookForInvites-foot bar bar-footer bar-balanced ">
+<div ng-controller="WriteProposalController" class="WriteProposal-foot bar bar-footer bar-balanced ">
     <div class="foot-nav left">
-        <img ng-click="RetakePhoto()" src="img/button/retake-photo.png" class="submit-small"/>
+        <img ng-click="RetakePhoto()" src="img/button/retake-photo2.png" class="submit-small"/>
     </div>
     <div class="foot-nav right">
-        <img ng-click="Next()" src="img/button/next2.png" class="submit-small"/>
+        <img ng-click="Send()" src="img/button/send.png" class="submit-small"/>
     </div>
 </div>
