--- a/www/templates/Chat.html
+++ b/www/templates/Chat.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Proposals"  class="Proposals-page">
+<ion-view view-title="Chat"  class="Proposals-page">
     <ion-content ng-controller="ProposalsController">
         <div class="content has-header padding-vertical padding-horizontal">
             <div class="list card">
