--- a/www/templates/ShareLocation.html
+++ b/www/templates/ShareLocation.html
@@ -22,7 +22,7 @@
                    <span class="km">3kms</span><span>away</span>
                 </div>
             </div>
-            <div class="row row-center">
+            <div class="row row-center map">
                 <div class="col google-maps">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3775.99567780453!2d99.01148700000006!3d18.842859999999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTjCsDUwJzM0LjMiTiA5OcKwMDAnNDEuNCJF!5e0!3m2!1sen!2sth!4v1432881764784" width="100%" height="300" frameborder="0" style="border:0"></iframe>
                 </div>
